--- a/public/index.html
+++ b/public/index.html
@@ -7,17 +7,33 @@
 
 <body>
   <p>If you're here, I'm not sure why. I'm just practicing implementing web tokens</p>
-
+  <form id= "login-form">
+    <div class="form-field">
+      <h3>Email Credentials</h3>
+    </div>
+    <div class="form-field">
+      <label>Email</label>
+      <input type="text" name="email" autofocus/>
+    </div>
+    <div class="form-field">
+      <label>Password</label>
+      <input id="password-text" type="text" name="password"/>
+    </div>
+    <div class="form-field">
+      <button>LOGIN</button>
+    </div>
+  </form>
   <script src="/socket.io/socket.io.js"></script>
-  <script>
-    var socket = io();
-
-    socket.on('connect', ()=>{
-      console.log('Connected to the SERVER');
-    });
-    socket.on('disconnect', ()=>{
-      console.log('Disconnected from the SERVER');
-    });
+  <script src = "/js/libs/jquery-3.1.1.min.js"></script>
+  <script src = "/js/login.js">
+    // var socket = io();
+    //
+    // socket.on('connect', ()=>{
+    //   console.log('Connected to the SERVER');
+    // });
+    // socket.on('disconnect', ()=>{
+    //   console.log('Disconnected from the SERVER');
+    // });
   </script>
 </body>
 </html>
