--- a/public/register.html
+++ b/public/register.html
@@ -3,13 +3,13 @@
 
 <head>
   <meta charset="utf-8">
+  <title>REGISTER</title>
 </head>
 
 <body>
-  <p>If you're here, I'm not sure why. I'm just practicing implementing web tokens</p>
-  <form id= "login-form">
+  <form id= "register-form">
     <div class="form-field">
-      <h3>Email Credentials</h3>
+      <h3>Register New User</h3>
     </div>
     <div class="form-field">
       <label>Email</label>
@@ -20,15 +20,16 @@
       <input id="password-text" type="password" name="password"/>
     </div>
     <div class="form-field">
-      <button>LOGIN</button>
+      <label>re-type Password</label>
+      <input id="retype-text" type="password" name="retype"/>
     </div>
-  </form>
-  <form id="register-form">
-    <button>REGISTER (New User)</button>
+    <div class="register-form">
+      <button>REGISTER</button>
+    </div>
   </form>
   <script src="/socket.io/socket.io.js"></script>
   <script src = "/js/libs/jquery-3.1.1.min.js"></script>
-  <script src = "/js/login.js">
+  <script src = "/js/register.js">
     // var socket = io();
     //
     // socket.on('connect', ()=>{
