Add/Remove a User's auth token on Login/Logout

--- a/public/join.html
+++ b/public/join.html
@@ -35,6 +35,11 @@
         <button>Join</button>
       </div>
     </form>
+    <form id="logout-form" formaction="/">
+      <div>
+        <input type= "submit" value="LOGOUT" action="/"</input>
+      </div>
+    </form>
   </div>
 
   <script src="/js/libs/mustache.js"></script>
